--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -32,5 +32,9 @@
    <definition name="accessDenied" extends="plain">
     <put-attribute name="body" value="/WEB-INF/views/accessDenied.jsp" />
    </definition>
+   
+   <definition name="test" extends="default">
+	<put-attribute name="body" value="/WEB-INF/views/test.jsp" />
+  </definition>
 
 </tiles-definitions>
